--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "covid19-tracker",
   "version": "0.1.0",
-  "homepage": "http://utuniyal12.github.io/covid19-tracker",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-"deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
